--- a/static/chohankyun/components/search/search.html
+++ b/static/chohankyun/components/search/search.html
@@ -72,8 +72,11 @@
                 </button>
             </div>
             <div class="modal-body bg-info text-light">
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ search.message | translate}}
+                <div ng-repeat="message in search.errors">
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate }}
+                </div>
             </div>
+
             <div class="modal-footer">
                 <button type="button" class="btn btn-sm btn-outline-info" data-dismiss="modal">{{ 'Close' | translate }}</button>
             </div>
