--- a/static/chohankyun/components/post/post.html
+++ b/static/chohankyun/components/post/post.html
@@ -89,7 +89,7 @@
                             <div class="row">
                                 <h5 class="w-25 text-left"><span class="badge badge-secondary">{{ 'Subject' | translate }}</span></h5>
                                 <div class="col-9">
-                                    <input type="text" id="id_subject" name="subject" class="form-control form-control-sm" ng-disabled="post.is_disabled" ng-model="post.model.subject" placeholder="{{ 'Please enter a subject.' | translate }}" required>
+                                    <input type="text" id="id_subject" name="subject" class="form-control form-control-sm" ng-disabled="post.is_disabled" ng-model="post.model.subject" placeholder="{{ 'Please enter a subject. (300 characters or less)' | translate }}" required>
                                 </div>
                             </div>
                         </div>
@@ -124,8 +124,8 @@
         <div class="row" ng-hide="post.is_disabled">
             <div class="container">
                 <div class="d-block d-sm-none" ta-toolbar="[['h1','h2','h3', 'h4', 'h5', 'h6', 'p'],['bold','italics', 'justifyLeft', 'justifyCenter', 'justifyRight', 'insertImage', 'insertLink', 'insertVideo']]" id="id_content_xs" name="content_xs" text-angular ng-model="post.model.content"
-                     ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;" placeholder="{{ 'Please enter your contents.' | translate }}" required></div>
-                <div class="d-none d-sm-block" id="id_content" name="content" text-angular ng-model="post.model.content" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;" placeholder="{{ 'Please enter your contents.' | translate }}"
+                     ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;" placeholder="{{ 'Please enter your contents. (20000 characters or less)' | translate }}" required></div>
+                <div class="d-none d-sm-block" id="id_content" name="content" text-angular ng-model="post.model.content" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;" placeholder="{{ 'Please enter your contents. (20000 characters or less)' | translate }}"
                      required></div>
             </div>
         </div>
@@ -172,9 +172,9 @@
                         <div class="container">
                             <div class="d-block d-sm-none" ta-toolbar="[['h1','h2','h3', 'h4', 'h5', 'h6', 'p'],['bold','italics', 'justifyLeft', 'justifyCenter', 'justifyRight', 'insertImage', 'insertLink', 'insertVideo']]"
                                  id="update_reply_editor_xs_{{ reply_data.id }}" name="update_reply_editor_xs_{{ reply_data.id }}" text-angular ng-model="reply_data.content" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;"
-                                 placeholder="{{ 'Please enter your reply.' | translate }}" required></div>
+                                 placeholder="{{ 'Please enter your reply. (20000 characters or less)' | translate }}" required></div>
                             <div class="d-none d-sm-block" id="update_reply_editor_{{ reply_data.id }}" name="update_reply_editor_{{ reply_data.id }}" text-angular ng-model="reply_data.content" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around"
-                                 style="font-size: small;" placeholder="{{ 'Please enter your reply.' | translate }}"
+                                 style="font-size: small;" placeholder="{{ 'Please enter your reply. (20000 characters or less)' | translate }}"
                                  required></div>
                         </div>
                     </div>
