board 의 게시물 화면 효과 변경

--- a/static/chohankyun/components/board/board.html
+++ b/static/chohankyun/components/board/board.html
@@ -24,7 +24,7 @@
                 </p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item  text-white bg-secondary">
+                <li class="list-group-item text-truncate text-white bg-secondary">
                     <div class="cart-text">
                         <div>
                             <i class="fa fa-folder-open-o" aria-hidden="true"></i> {{ post.category_name }}
