댓글 다국어 처리

--- a/static/chohankyun/components/post/post.html
+++ b/static/chohankyun/components/post/post.html
@@ -206,9 +206,9 @@
             <div class="row">
                 <div class="container">
                     <div class="d-block d-sm-none" ta-toolbar="[['h1','h2','h3', 'h4', 'h5', 'h6', 'p'],['bold','italics', 'justifyLeft', 'justifyCenter', 'justifyRight', 'insertImage', 'insertLink', 'insertVideo']]" id="create_reply_editor_xs" name="create_reply_editor_xs" text-angular
-                         ng-model="reply.model.content" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;" placeholder="{{ 'Please enter your reply.' | translate }}" required></div>
+                         ng-model="reply.model.content" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;" placeholder="{{ 'Please enter your reply. (20000 characters or less)' | translate }}" required></div>
                     <div class="d-none d-sm-block" id="create_reply_editor" name="create_reply_editor" text-angular ng-model="reply.model.content" ta-text-editor-class="clearfix border-around" ta-html-editor-class="border-around" style="font-size: small;"
-                         placeholder="{{ 'Please enter your reply.' | translate }}" required></div>
+                         placeholder="{{ 'Please enter your reply. (20000 characters or less)' | translate }}" required></div>
                 </div>
             </div>
             <div class="row justify-content-between white-box mx-0 mb-3">
