--- a/static/chohankyun/components/home/home.html
+++ b/static/chohankyun/components/home/home.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-lg-3 col-md-6 col-sm-6 portfolio-item small" ng-repeat="post in home.changed_datetime">
+    <div class="col-lg-3 col-md-6 col-sm-6 portfolio-item small" ng-repeat="post in home.updated_datetime">
         <div class="card h-100 site-polaroid">
             <a href ng-click="home.click_post(post.id); index.select_index_item='read'"><img class="card-img-top site-thumbnail" ng-src="{{post.first_image_source ? post.first_image_source : 'http://via.placeholder.com/250x150?text=Text Only'}}" ></a>
             <div class="card-body text-center px-1 py-3">
