jwt 인증 적용 - jwt 인증 4단계 - usernamefind 리펙토링

--- a/templates/registration/username_find_email.html
+++ b/templates/registration/username_find_email.html
@@ -1,10 +1,12 @@
+{% spaceless %}
 {% load i18n %}{% autoescape off %}
 {% blocktrans %}You're receiving this e-mail because you requested a username for your user account at {{ site_name }}.{% endblocktrans %}
 
-{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
+{% trans "Your username, in case you've forgotten:" %} {{ user.username }}
 
 {% trans "Thank you." %}
 
-{{ site_name }} {{ domain }}
+{{ site_name }} : {{ protocol }}://{{ domain }}
 
 {% endautoescape %}
+{% endspaceless %}
