--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,15 +1,18 @@
-{% load i18n %}{% autoescape off %}
-{% blocktrans %}You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
+{% spaceless %}
+    {% load i18n %}
+    {% autoescape off %}
+        {% blocktrans %}You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
 
-{% trans "Your temporary password:" %} {{ password }}
+        {% trans "Your temporary password:" %} {{ password }}
 
-{% trans "Please click the following link and reset a temporary password." %}
-{% block reset_link %}
-{{ protocol }}://{{ host }}{% url 'rest_password_reset_confirm' uid=uid token=token password=password %}
-{% endblock %}
-{% trans "Please change your password on change password page after temporary password reset!" %}
+        {% trans "Please click the following link and reset a temporary password." %}
+        {% block reset_link %}
+            {{ protocol }}://{{ host }}{% url 'rest_password_reset_confirm' uid=uid token=token password=password %}
+        {% endblock %}
+        {% trans "Please change your password on change password page after temporary password reset!" %}
 
-{% trans "Thank you." %}
+        {% trans "Thank you." %}
 
-{{ site_name }} {{ domain }}
-{% endautoescape %}
+        {{ site_name }} {{ domain }}
+    {% endautoescape %}
+{% endspaceless %}
