jwt 인증 적용 - 기본기능 테스트 1

--- a/templates/auth/password_reset_email.html
+++ b/templates/auth/password_reset_email.html
@@ -7,7 +7,7 @@
 
         {% trans "Please click the following link and reset a temporary password." %}
         {% block reset_link %}
-            {{ protocol }}://{{ host }}{% url 'rest_password_reset_confirm' uid=uid token=token password=password %}
+            {{ protocol }}://{{ host }}{% url 'password_reset_confirm' uid=uid token=token password=password %}
         {% endblock %}
         {% trans "Please change your password on change password page after temporary password reset!" %}
 
