--- a/static/chohankyun/components/auth_extend/password.html
+++ b/static/chohankyun/components/auth_extend/password.html
@@ -63,7 +63,9 @@
                 </button>
             </div>
             <div class="modal-body bg-info text-light">
-                <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ password.message | translate }}
+                <div ng-repeat="message in password.messages">
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-sm btn-outline-info" data-dismiss="modal">{{ 'Close' | translate }}</button>
