api_auth 개발 - rest_auth, allauth, djangorestframework-jwt 를   이용한 api_auth 모듈 개발 - api_auth 모듈 개발 완료

--- a/templates/auth/password_changed_email.html
+++ b/templates/auth/password_changed_email.html
@@ -1,14 +1,12 @@
-{% spaceless %}
-    {% load i18n %}
-    {% autoescape off %}
-        {% blocktrans %}You're receiving this e-mail because you  has been changed a password for your user account at {{ site_name }}.{% endblocktrans %}
+{% load i18n %}
+{% autoescape off %}
+    {% blocktrans %}You're receiving this e-mail because you has been changed a password for your user account at {{ site_name }}.{% endblocktrans %}
 
-        {% trans "Your password has been changed from [%(old_password)s] to [%(new_password)s]." %}
+    {% blocktrans %}Your password has been changed from [{{ old_password }}] to [{{ new_password }}].{% endblocktrans %}
 
-        {% trans "If your Password is an invalid update, please update your username and password through Password finding and Password finding on the login." %}
+    {% trans "If your Password is an invalid update, please update your username and password through Password finding and Password finding on the login." %}
 
-        {% trans "Thank you." %}
+    {% trans "Thank you." %}
 
-        {{ site_name }} {{ domain }}
-    {% endautoescape %}
-{% endspaceless %}
+    {{ site_name }} {{ domain }}
+{% endautoescape %}
