--- a/static/chohankyun/components/home/home.html
+++ b/static/chohankyun/components/home/home.html
@@ -180,8 +180,8 @@
                 </button>
             </div>
             <div class="modal-body bg-info text-light">
-                <div ng-repeat="message in home.errors">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate }}
+                <div ng-repeat="message in home.messages">
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
                 </div>
             </div>
             <div class="modal-footer">
