--- a/static/chohankyun/components/search/search.html
+++ b/static/chohankyun/components/search/search.html
@@ -72,8 +72,8 @@
                 </button>
             </div>
             <div class="modal-body bg-info text-light">
-                <div ng-repeat="message in search.errors">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate }}
+                <div ng-repeat="message in search.messages">
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
                 </div>
             </div>
 
