--- a/templates/auth/password_changed_email.html
+++ b/templates/auth/password_changed_email.html
@@ -1,12 +1,12 @@
 {% load i18n %}
 {% autoescape off %}
-    {% blocktrans %}You're receiving this e-mail because you has been changed a password for your user account at {{ site_name }}.{% endblocktrans %}
+    {% blocktrans %}You're receiving this e-mail because you has been updated a password for your user account at {{ site_name }}.{% endblocktrans %}
 
-    {% blocktrans %}Your password has been changed from [{{ old_password }}] to [{{ new_password }}].{% endblocktrans %}
+    {% blocktrans %}Your password has been updated from [{{ old_password }}] to [{{ new_password }}].{% endblocktrans %}
 
     {% trans "If your Password is an invalid update, please update your username and password through Password finding and Password finding on the login." %}
 
     {% trans "Thank you." %}
 
-    {{ site_name }} {{ domain }}
+    {{ site_name }} : {{ protocol }}://{{ domain }}
 {% endautoescape %}
