--- a/templates/auth/password_reset_email.html
+++ b/templates/auth/password_reset_email.html
@@ -12,5 +12,5 @@
 
     {% trans "Thank you." %}
 
-    {{ site_name }} {{ domain }}
+    {{ site_name }} : {{ protocol }}://{{ domain }}
 {% endautoescape %}
