리펙토링 - 회원 가입 다국어 처리  (문자열로 포함해야함, user.username X)

--- a/templates/auth/email_confirm_email.html
+++ b/templates/auth/email_confirm_email.html
@@ -1,7 +1,8 @@
-{% load i18n %}{% autoescape off %}
+{% load i18n %}
+{% autoescape off %}
     {% blocktrans %}Hello from {{ site_name }}!{% endblocktrans %}
 
-    {% blocktrans %}You're receiving this e-mail because user {{ userr.userrname }} has given yours as an e-mail address to connect their account.{% endblocktrans %}
+    {% blocktrans %}You're receiving this e-mail because user {{ username }} has given yours as an e-mail address to connect their account.{% endblocktrans %}
 
     {% blocktrans %}To confirm this is correct, go to.{% endblocktrans %}
 
