--- a/static/chohankyun/components/home/home.html
+++ b/static/chohankyun/components/home/home.html
@@ -181,7 +181,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in home.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
             <div class="modal-footer">
