--- a/static/chohankyun/components/search/search.html
+++ b/static/chohankyun/components/search/search.html
@@ -73,7 +73,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in search.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
 
