--- a/static/chohankyun/components/api_auth/find.html
+++ b/static/chohankyun/components/api_auth/find.html
@@ -41,7 +41,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in find.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
             <div class="modal-footer">
