--- a/static/chohankyun/components/api_auth/profile.html
+++ b/static/chohankyun/components/api_auth/profile.html
@@ -64,7 +64,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in profile.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
             <div class="modal-footer">
@@ -86,7 +86,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in profile.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
             <div class="modal-footer">
