--- a/static/chohankyun/components/api_auth/register.html
+++ b/static/chohankyun/components/api_auth/register.html
@@ -77,7 +77,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in register.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
             <div class="modal-footer">
