--- a/static/chohankyun/components/board/board.html
+++ b/static/chohankyun/components/board/board.html
@@ -66,7 +66,7 @@
             </div>
             <div class="modal-body bg-info text-light">
                 <div ng-repeat="message in board.messages">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message }}
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> {{ message | translate}}
                 </div>
             </div>
             <div class="modal-footer">
